--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 
   <head>
     <title>Angular2 Starter</title>
+    <link rel="stylesheet" href="./app/vendors/bootstrap.min.css" />
   </head>
 
   <body>
