Dropdown with infinite scroll

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,23 @@
 <html>
 
-  <head>
-    <title>Angular2 Starter</title>
-    <link rel="stylesheet" href="./app/vendors/bootstrap.min.css" />
-  </head>
+<head>
+  <title>Angular2 Starter</title>
+  <link rel="stylesheet" href="./app/vendors/bootstrap.min.css" />
+</head>
 
-  <body>
-    <h1>Angular2 custom validations</h1>
-    <my-app>App is loading...</my-app>
-    
-    <script src="bundle.js"></script>
-  </body>
+<body>
+  <div class="container" style="    
+        height: 90%;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        border: solid #ababab 1px;
+        border-radius: 10px;
+        padding: 30px;">
+    <h1 style="margin-bottom:30px">Angular2 custom validations</h1>
+
+    <my-app class="row">App is loading...</my-app>
+  </div>
+  <script src="bundle.js"></script>
+</body>
 
 </html>
