added new field, new option to disable/enable field, fixed dropdown display, changed form layout

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 
 <head>
   <title>Angular2 Starter</title>
-  <link rel="stylesheet" href="./app/vendors/bootstrap.min.css" />
+  <link rel="stylesheet" href="./app/assets/bootstrap.min.css" />
+  <link rel="stylesheet" href="./app/assets/styles.css" />
 </head>
 
 <body>
